Added License Path parameter and updated installer links.

--- a/src/main/resources/io/jenkins/plugins/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/Messages.properties
@@ -3,6 +3,7 @@ ProvarAutomation.DescriptorImpl.warnings.missingTestFolder=Test Folder is missin
 ProvarAutomation.DescriptorImpl.warnings.missingTestPlan=Test Plan name is missing
 ProvarAutomation.DescriptorImpl.warnings.noSecretsPassword=Your project is missing a secrets password
 ProvarAutomation.DescriptorImpl.warnings.projectFolderMissing=Project folder name is missing, make sure the root of your repo contains a Provar Project
+ProvarAutomation.DescriptorImpl.warnings.missingLicensePath=License path is missing
 ProvarAutomation.DescriptorImpl.DisplayName=Run Provar Automation Tests
 ProvarAutomation.ToolInstallation.DescriptorImpl.DisplayName=Provar Automation CLI
 ProvarAutomation.AntExecutionFailed=command execution failed.
